# Prima-esercitazione

./: .gitignore  Makefile.example  array.cpp
ComplexNumbers/: ComplexNumbers.cpp  ComplexNumbers.h
Es 2/: .gitignore  Makefile  Readme.MD  Studente.cpp  Studente.h  Studente_Class.cpp  Studente_Class.h  provastudente.cpp
Exercise_1/: NotOrderedException.cpp  array.cpp  test.cpp
Generics/: Generic.cpp  Generic.h
Lab 1/: Lab1.txt
Lab_exams_realizations/160613/: Eo_strings.cpp  Eo_strings.h  Exam_160613.cpp  Exam_160613.h
Liste/Liste/: ListaCursore.h  ListaLineare.h
Matrix/: .gitignore  Makefile  Matrix.cpp  Matrix.h  Test_Cases.cpp  Test_Matrix.cpp
Point/: Point.cpp  Point.h  test_Point.cpp
Postfix_expression/: Makefile  PostFixTester.cpp  Postfix.h
TDA_by_greg/: .gitignore  TDA_by_greg.code-workspace
TDA_by_greg/Dictionary/PointerDictionary/: CMakeLists.txt  TestsPointerDictionary.cpp  main.cpp
TDA_by_greg/Dictionary/PointerDictionary/include/: PointerDictionary.h
TDA_by_greg/Dictionary/PointerDictionary/src/: PointerDictionary.cpp  PointerDictionary.tpp
TDA_by_greg/Dictionary/include/: Dictionary.h
TDA_by_greg/Exception/: IllegalStateException.cpp  IllegalStateException.h  OutOfBoundException.cpp  OutOfBoundException.h
TDA_by_greg/Graphs/: CMakeLists.txt
TDA_by_greg/Graphs/AdjacenceMatrix/: CMakeLists.txt  Makefile  TestsAdjacencyMatrixGraph.cpp  main.cpp
TDA_by_greg/Graphs/AdjacenceMatrix/include/: AdjacencyMatrixGraph.h
TDA_by_greg/Graphs/AdjacenceMatrix/src/: AdjacencyMatrixGraph.tpp
TDA_by_greg/Graphs/include/: Graph.h  Link.h
TDA_by_greg/Graphs/src/: Graph.tpp
TDA_by_greg/Lists/: LinearList.h  Makefile  Node.cpp  Node.h  Nodo.cpp  Nodo.h  Test_Cases  main.cpp  readme.md  tester.cpp
TDA_by_greg/Lists/Queue/include/: Queue.h
TDA_by_greg/Lists/Queue/pointer_implementation/: CMakeLists.txt  Makefile  main  main.cpp  pointerQueue.cpp
TDA_by_greg/Lists/Queue/pointer_implementation/include/: PointerQueue.h
TDA_by_greg/Lists/Queue/pointer_implementation/src/: PointerQueue.tpp
TDA_by_greg/Lists/Queue/pointer_implementation/tests/: Makefile  tester_pointerQueue.cpp
TDA_by_greg/Lists/Queue/src/: Queue.tpp
TDA_by_greg/Lists/Queue/vector_implementation/: CMakeLists.txt  Test_Cases.cpp
TDA_by_greg/Lists/Queue/vector_implementation/include/: VectorQueue.h
TDA_by_greg/Lists/Queue/vector_implementation/src/: VectorQueue.cpp  VectorQueue.tpp
TDA_by_greg/Lists/Realizzazione con puntatori/: Lista.cpp  Lista.h
TDA_by_greg/Lists/Realizzazione con vettore/: Lista.h
TDA_by_greg/Lists/TemplateAbstractTest/: BaseTemplate.h  DerivedClass.cpp
TDA_by_greg/Lists/include/: LinearList.h  Node.h
TDA_by_greg/Lists/old/: davedereListaLineare.h  oldLista.cpp
TDA_by_greg/Lists/pointer_implementation/: LinkedListTester.cpp  Linked_List_Test_Cases.cpp  Lista.cpp  Lista.h  StackListTestCases.cpp  tester.cpp
TDA_by_greg/Lists/pointer_implementation/Linear List/: LinearList.h
TDA_by_greg/Lists/pointer_implementation/Linked List/: CMakeLists.txt  LinkedListTester.cpp  Linked_List_Test_Cases.cpp
TDA_by_greg/Lists/pointer_implementation/Pointer List/: CMakeLists.txt  TestsPointerList.cpp
TDA_by_greg/Lists/pointer_implementation/Stack/: CMakeLists.txt  StackListTestCases.cpp
TDA_by_greg/Lists/pointer_implementation/include/: LinkedList.h  Node.h  PointerList.h  StackList.h
TDA_by_greg/Lists/pointer_implementation/src/: LinkedList.cpp  PointerList.cpp
TDA_by_greg/Lists/src/: Node.cpp
TDA_by_greg/Lists/vector_implementation/: Test_Cases.cpp  tester.cpp
TDA_by_greg/Lists/vector_implementation/include/: OutOfBoundException.h  VectorList.h
TDA_by_greg/Lists/vector_implementation/src/: OutOfBoundException.cpp  VectorList.cpp  VectorList.tpp
TDA_by_greg/Prioriqueue/: CMakeLists.txt
TDA_by_greg/Prioriqueue/BinTree/: CMakeLists.txt  TestsPrioriqueue.cpp  main.cpp
TDA_by_greg/Prioriqueue/BinTree/include/: BinTreePrioriqueue.h
TDA_by_greg/Prioriqueue/Heap/: CMakeLists.txt  TestsPrioriqueueHeap.cpp
TDA_by_greg/Prioriqueue/Heap/include/: HeapPrioriqueue.h
TDA_by_greg/Prioriqueue/Heap/src/: HeapPrioriqueue.tpp
TDA_by_greg/Prioriqueue/include/: Prioriqueue.h
TDA_by_greg/Sets/include/: Set.h
TDA_by_greg/Sets/pointerSet/: CMakeLists.txt  PointerSet.cpp  TestsPointerSet.cpp  main.cpp
TDA_by_greg/Sets/pointerSet/include/: PointerSet.h
TDA_by_greg/Sets/pointerSet/src/: PointerSet.tpp
TDA_by_greg/Sets/src/: Set.cpp
TDA_by_greg/TestsAllTDAs/: CMakeLists.txt  Makefile  Tests.cpp
TDA_by_greg/Trees/BinarySearchTrees/: CMakeLists.txt  TestsBinarySearchTrees.cpp  main.cpp  mainTest.cpp
TDA_by_greg/Trees/BinarySearchTrees/include/: BinarySearchTree.h
TDA_by_greg/Trees/BinarySearchTrees/src/: BinarySearchTree.tpp
TDA_by_greg/Trees/N-Trees/: CMakeLists.txt  TestsNTrees.cpp  main.cpp
TDA_by_greg/Trees/N-Trees/include/: N-Tree.h
TDA_by_greg/Trees/N-Trees/src/: N-Tree.tpp
TDA_by_greg/Trees/include/: Tree.h  Tree_v2.h
TDA_by_greg/include/: GraphNode.h  Node.h
TemplateAbstractTest/: BaseTemplate.cpp  DerivedClass.cpp  DerivedClass.h
cpp/170117 cell grid/src/: 170117.cpp  cell.h  grid.h
cpp/170131 balanced tree/src/: albBinari.h  balancedtree.h  tester.cpp
cpp/170214 alberi Nari/src/: AlberiNari.h  tester.cpp
cpp/170925 alberi Binari/src/: BinariGaetano.h  Nodo.h  tester.cpp
cpp/Biblioteca (java)/src/: Biblioteca.java  Libro.java
cpp/Coda/src/: Coda.h  Dequeue.h  main.cpp
cpp/Pila/src/: Main.cpp  MultipleStack.h  Pila.h
cpp/alberi/: Tree.h  TreeList.h
cpp/alberiBinari/src/: Bin_tree.h  Bin_treec.h  exceptions.h  tester.cpp
cpp/codep/: codap.h
cpp/codevt/: Makefile  codapt.cpp  codavt.cpp  testcoda.cpp
cpp/dizionari/: dictionary.h  hash_table.h
cpp/grafi/: Grafo.h  GrafoList.h  GrafoMat.h
cpp/liste/list_vector/: linear_list.h  list_vector.h
cpp/pilav/: Makefile
cpp/pilavt/: pilapt.h  pilavt.h
hello_world/: Makefile  main.cpp
lcov-test/: Makefile  main  main.cpp  main_coverage.info
(+8 files in other folders)
